// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSwitch assigns automatically generated ID to label 1`] = `
<div
  class="euiSwitch"
>
  <button
    aria-checked="false"
    aria-labelledby="generated-id"
    class="euiSwitch__button"
    id="generated-id"
    role="switch"
    type="button"
  >
    <span
      class="euiSwitch__body"
    >
      <span
        class="euiSwitch__thumb"
      />
      <span
        class="euiSwitch__track"
      >
        <svg
          class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <svg
          class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon euiSwitch__icon--checked"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </span>
    </span>
  </button>
  <span
    class="euiSwitch__label"
    id="generated-id"
  >
    Label
  </span>
</div>
`;

exports[`EuiSwitch is rendered 1`] = `
<div
  class="euiSwitch testClass1 testClass2"
>
  <button
    aria-checked="false"
    aria-label="aria-label"
    aria-labelledby="generated-id"
    class="euiSwitch__button"
    data-test-subj="test subject string"
    id="test"
    role="switch"
    type="button"
  >
    <span
      class="euiSwitch__body"
    >
      <span
        class="euiSwitch__thumb"
      />
      <span
        class="euiSwitch__track"
      >
        <svg
          class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <svg
          class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon euiSwitch__icon--checked"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </span>
    </span>
  </button>
  <span
    class="euiSwitch__label"
    id="generated-id"
  >
    Label
  </span>
</div>
`;
